--- a/spark-dependencies/pom.xml
+++ b/spark-dependencies/pom.xml
@@ -36,7 +36,7 @@
   
 
   <properties>
-    <spark.version>1.4.1</spark.version>
+    <spark.version>1.4.2-fdp-ml</spark.version>
     <scala.version>2.10.4</scala.version>
     <scala.binary.version>2.10</scala.binary.version>
 
@@ -53,6 +53,18 @@
     <spark.download.url>http://archive.apache.org/dist/spark/spark-${spark.version}/spark-${spark.version}.tgz</spark.download.url>
     <py4j.version>0.8.2.1</py4j.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>cloudera</id>
+      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+    </repository>
+    <repository>
+      <id>ops-build-0008</id>
+      <name>ops-build-0008-releases</name>
+      <url>http://artifactory.nm.flipkart.com:8081/artifactory/ext-release-local</url>
+    </repository>
+  </repositories>
 
   <dependencyManagement>
     <dependencies>
