--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -35,7 +35,7 @@
   <url>http://zeppelin.incubator.apache.org</url>
   
   <properties>
-    <spark.version>1.4.1</spark.version>
+    <spark.version>1.4.2-fdp-ml</spark.version>
     <scala.version>2.10.4</scala.version>
     <scala.binary.version>2.10</scala.binary.version>
 
@@ -43,6 +43,18 @@
     <py4j.version>0.8.2.1</py4j.version>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>cloudera</id>
+      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+    </repository>
+    <repository>
+      <id>ops-build-0008</id>
+      <name>ops-build-0008-releases</name>
+      <url>http://artifactory.nm.flipkart.com:8081/artifactory/ext-release-local</url>
+    </repository>
+  </repositories>
+  
   <dependencies>
     <dependency>
       <groupId>org.slf4j</groupId>
